--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/splashFragment"
-        android:name="com.bink.localhero.views.splash.SplashFragment"
+        android:name="com.bink.localhero.screens.splash.SplashFragment"
         android:label="fragment_splash"
         tools:layout="@layout/fragment_splash" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.bink.localhero.views.login.LoginFragment"
+        android:name="com.bink.localhero.screens.login.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
@@ -28,12 +28,12 @@
     </fragment>
     <fragment
         android:id="@+id/scanBarcodeFragment"
-        android:name="com.bink.localhero.views.scan_barcode.ScanBarcodeFragment"
+        android:name="com.bink.localhero.screens.scanBarcode.ScanBarcodeFragment"
         android:label="fragment_scan_barcode"
         tools:layout="@layout/fragment_scan_barcode" />
     <fragment
         android:id="@+id/addPaymentCardFragment"
-        android:name="com.bink.localhero.views.add_payment_card.AddPaymentCardFragment"
+        android:name="com.bink.localhero.screens.add_payment_card.AddPaymentCardFragment"
         android:label="fragment_add_payment_card"
         tools:layout="@layout/fragment_add_payment_card" />
 </navigation>
