--- a/app/src/main/res/layout/fragment_scan_barcode.xml
+++ b/app/src/main/res/layout/fragment_scan_barcode.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.scan_barcode.ScanBarcodeFragment">
+    tools:context=".screens.scanBarcode.ScanBarcodeFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
