Payment card UI done

--- a/app/src/main/res/layout/fragment_add_payment_card.xml
+++ b/app/src/main/res/layout/fragment_add_payment_card.xml
@@ -29,6 +29,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar">
 
+        <TextView
+            android:id="@+id/tv_payment_card_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_card_number"
             android:layout_width="match_parent"
@@ -37,6 +42,7 @@
             android:hint="@string/card_number">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_card_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -75,8 +81,10 @@
             android:hint="@string/expiry">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_expiry"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="date" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
