--- a/app/src/main/res/layout/fragment_add_payment_card.xml
+++ b/app/src/main/res/layout/fragment_add_payment_card.xml
@@ -44,7 +44,9 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_card_number"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:maxLength="16" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -84,7 +86,8 @@
                 android:id="@+id/et_expiry"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="date" />
+                android:inputType="date"
+                android:maxLength="5" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -100,6 +103,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
