--- a/app/src/main/res/layout/fragment_add_payment_card.xml
+++ b/app/src/main/res/layout/fragment_add_payment_card.xml
@@ -58,6 +58,7 @@
             android:hint="@string/name_on_card">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_name_on_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
