--- a/app/src/main/res/layout/fragment_add_payment_card.xml
+++ b/app/src/main/res/layout/fragment_add_payment_card.xml
@@ -72,6 +72,7 @@
             android:hint="@string/nickname">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_nickname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
