--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="add_payment_card_layout_margin">19dp</dimen>
     <dimen name="add_payment_card_button_bottom_margin">64dp</dimen>
     <dimen name="plan_item_padding">12dp</dimen>
+    <dimen name="margin_8dp">8dp</dimen>
 </resources>
