bottom sheet modal layout

--- a/app/src/main/res/layout/wallet_fragment.xml
+++ b/app/src/main/res/layout/wallet_fragment.xml
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/img_more"
         android:layout_width="80dp"
         android:layout_height="30dp"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
