--- a/app/src/main/res/layout/bottom_sheet_modal.xml
+++ b/app/src/main/res/layout/bottom_sheet_modal.xml
@@ -9,7 +9,7 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="POSEIDON GOD MODE"
+        android:text="@string/poseidon_god_mode_title"
         android:textStyle="bold"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
@@ -25,17 +25,40 @@
         android:layout_height="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/presence_video_online" />
+        app:srcCompat="@drawable/ic_small" />
 
     <TextView
         android:id="@+id/tv_add_payment_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="@dimen/margin_8dp"
         android:layout_marginStart="@dimen/margin_8dp"
-        android:text="Add payment card"
+        android:text="@string/add_payment_card_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.118"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <TextView
+        android:id="@+id/tv_settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_8dp"
+        android:text="@string/settings_text"
+        app:layout_constraintEnd_toEndOf="@+id/tv_add_payment_card"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/tv_add_payment_card"
+        app:layout_constraintTop_toBottomOf="@+id/tv_add_payment_card" />
+
+    <TextView
+        android:id="@+id/tv_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_8dp"
+        android:text="@string/cancel_text"
+        android:textColor="@color/red"
+        app:layout_constraintEnd_toEndOf="@+id/tv_settings"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/tv_settings"
+        app:layout_constraintTop_toBottomOf="@+id/tv_settings" />
 </androidx.constraintlayout.widget.ConstraintLayout>
