Added binding to mottom sheet

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="add_payment_card_button_bottom_margin">64dp</dimen>
     <dimen name="plan_item_padding">12dp</dimen>
     <dimen name="margin_8dp">8dp</dimen>
+    <dimen name="list_item_spacing">16dp</dimen>
+    <dimen name="list_item_spacing_half">8dp</dimen>
 </resources>
