--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -47,7 +47,6 @@
             android:id="@+id/action_walletFragment_to_modalBottomSheet"
             app:destination="@id/modalBottomSheet" />
     </fragment>
-        tools:layout="@layout/fragment_scan_barcode" />
     <fragment
         android:id="@+id/addPaymentCardFragment"
         android:name="com.bink.localhero.screens.add_payment_card.AddPaymentCardFragment"
@@ -56,5 +55,9 @@
     <dialog
         android:id="@+id/modalBottomSheet"
         android:name="com.bink.localhero.screens.dialog.ModalBottomSheet"
-        android:label="ModalBottomSheet" />
+        android:label="ModalBottomSheet" >
+        <action
+            android:id="@+id/action_modalBottomSheet_to_addPaymentCardFragment"
+            app:destination="@id/addPaymentCardFragment" />
+    </dialog>
 </navigation>
