--- a/app/src/main/res/layout/bottom_sheet_modal.xml
+++ b/app/src/main/res/layout/bottom_sheet_modal.xml
@@ -4,18 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/margin_8dp">
+    android:paddingBottom="@dimen/padding_42dp">
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_26dp"
         android:text="@string/poseidon_god_mode_title"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/img_modal_icon"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.207"
         app:layout_constraintStart_toEndOf="@+id/img_modal_icon"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,7 +24,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="@dimen/margin_8dp"
-        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_marginTop="@dimen/margin_26dp"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -32,37 +32,36 @@
 
     <TextView
         android:id="@+id/tv_add_payment_card"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_8dp"
-        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_marginStart="@dimen/margin_26dp"
+        android:layout_marginTop="@dimen/margin_26dp"
         android:text="@string/add_payment_card_text"
+        app:layout_constraintBottom_toTopOf="@id/tv_settings"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.118"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_modal_icon" />
 
     <TextView
         android:id="@+id/tv_settings"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_marginTop="@dimen/margin_26dp"
         android:text="@string/settings_text"
         app:layout_constraintEnd_toEndOf="@+id/tv_add_payment_card"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toTopOf="@id/tv_cancel"
         app:layout_constraintStart_toStartOf="@+id/tv_add_payment_card"
         app:layout_constraintTop_toBottomOf="@+id/tv_add_payment_card" />
 
     <TextView
         android:id="@+id/tv_cancel"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_8dp"
-        android:layout_marginBottom="@dimen/margin_8dp"
+        android:layout_marginTop="@dimen/margin_26dp"
+        android:layout_marginBottom="@dimen/padding_42dp"
         android:text="@string/cancel_text"
         android:textColor="@color/red"
         app:layout_constraintEnd_toEndOf="@+id/tv_settings"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tv_settings"
         app:layout_constraintTop_toBottomOf="@+id/tv_settings" />
 </androidx.constraintlayout.widget.ConstraintLayout>
