--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="add_payment_card_field_bottom_margin">16dp</dimen>
     <dimen name="add_payment_card_layout_margin">19dp</dimen>
     <dimen name="add_payment_card_button_bottom_margin">64dp</dimen>
-    <dimen name="plan_item_padding">12dp</dimen>
+    <dimen name="plan_item_padding">16dp</dimen>
     <dimen name="payment_value_padding">4dp</dimen>
+    <dimen name="wallet_header_size">25sp</dimen>
 </resources>
