--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/splashFragment"
         android:name="com.bink.localhero.screens.splash.SplashFragment"
         android:label="fragment_splash"
-        tools:layout="@layout/fragment_splash" >
+        tools:layout="@layout/fragment_splash">
         <action
             android:id="@+id/action_splashFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
@@ -18,7 +18,7 @@
         android:id="@+id/loginFragment"
         android:name="com.bink.localhero.screens.login.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" >
+        tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment_to_scanBarcodeFragment"
             app:destination="@id/scanBarcodeFragment" />
@@ -33,7 +33,7 @@
         android:id="@+id/scanBarcodeFragment"
         android:name="com.bink.localhero.screens.scanBarcode.ScanBarcodeFragment"
         android:label="fragment_scan_barcode"
-        tools:layout="@layout/fragment_scan_barcode" >
+        tools:layout="@layout/fragment_scan_barcode">
         <action
             android:id="@+id/action_scanBarcodeFragment_to_walletFragment"
             app:destination="@id/walletFragment" />
@@ -42,20 +42,33 @@
         android:id="@+id/walletFragment"
         android:name="com.bink.localhero.screens.wallet.WalletFragment"
         android:label="wallet_fragment"
-        tools:layout="@layout/wallet_fragment" >
+        tools:layout="@layout/wallet_fragment">
         <action
             android:id="@+id/action_walletFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_walletFragment_to_modalBottomSheet"
+            app:destination="@id/modalBottomSheet" />
     </fragment>
     <fragment
         android:id="@+id/addPaymentCardFragment"
         android:name="com.bink.localhero.screens.add_payment_card.AddPaymentCardFragment"
         android:label="fragment_add_payment_card"
-        tools:layout="@layout/fragment_add_payment_card" >
+        tools:layout="@layout/fragment_add_payment_card">
 
         <action
             android:id="@+id/action_addPaymentCard_to_wallet"
             app:destination="@id/walletFragment" />
 
     </fragment>
+
+    <dialog
+        android:id="@+id/modalBottomSheet"
+        android:name="com.bink.localhero.screens.dialog.ModalBottomSheet"
+        android:label="ModalBottomSheet">
+        <action
+            android:id="@+id/action_modalBottomSheet_to_addPaymentCardFragment"
+            app:destination="@id/addPaymentCardFragment" />
+    </dialog>
+
 </navigation>
