--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#48CFA3</color>
     <color name="header_grey">#d8d8d8</color>
+    <color name="red">#F44336</color>
 </resources>
