--- a/app/src/main/res/layout/bottom_sheet_modal.xml
+++ b/app/src/main/res/layout/bottom_sheet_modal.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/padding_42dp">
@@ -25,9 +24,9 @@
         android:layout_height="50dp"
         android:layout_marginStart="@dimen/margin_8dp"
         android:layout_marginTop="@dimen/margin_26dp"
-        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
         app:srcCompat="@drawable/ic_small" />
 
     <TextView
@@ -37,10 +36,19 @@
         android:layout_marginStart="@dimen/margin_26dp"
         android:layout_marginTop="@dimen/margin_26dp"
         android:text="@string/add_payment_card_text"
-        app:layout_constraintBottom_toTopOf="@id/tv_settings"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_modal_icon" />
+
+    <TextView
+        android:id="@+id/tv_locations"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_26dp"
+        android:text="Gail's Bakery"
+        app:layout_constraintEnd_toEndOf="@+id/tv_add_payment_card"
+        app:layout_constraintStart_toStartOf="@+id/tv_add_payment_card"
+        app:layout_constraintTop_toBottomOf="@+id/tv_add_payment_card" />
 
     <TextView
         android:id="@+id/tv_settings"
@@ -48,10 +56,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_26dp"
         android:text="@string/settings_text"
-        app:layout_constraintEnd_toEndOf="@+id/tv_add_payment_card"
         app:layout_constraintBottom_toTopOf="@id/tv_cancel"
-        app:layout_constraintStart_toStartOf="@+id/tv_add_payment_card"
-        app:layout_constraintTop_toBottomOf="@+id/tv_add_payment_card" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_locations"
+        app:layout_constraintStart_toStartOf="@+id/tv_locations"
+        app:layout_constraintTop_toBottomOf="@+id/tv_locations" />
 
     <TextView
         android:id="@+id/tv_cancel"
