Map displaying with test data

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_splashFragment_to_wallet"
             app:destination="@id/walletFragment" />
+        <action
+            android:id="@+id/test"
+            app:destination="@id/mapCompose" />
     </fragment>
   
     <fragment
